# ArcaneQuant

./: .bumpversion.cfg  .gitignore  APIkey.env  APIkey_example.env  CHANGELOG.md  CoreJupy.ipynb  CoreJupy_safe.ipynb  DEVNOTES.md  PIP INSTALL LINES.txt  README.md  SQLlogin.env  commitupdate.ps1  main.py  pyproject.toml  testSQLlogin.env
arcanequant/: __init__.py
arcanequant/fend/: DataController.qml  DataManifestController.qml  MainItem.qml  SimpleView.qml  TabManager.qml  TabView.qml  __init__.py  app.py  backendInterfacer.py
arcanequant/quantlib/: DataManager.py  DataManifestManager.py  SQLManager.py  __init__.py
data/StockHistData/: ARM.csv  KO.csv  MSFT.csv  NVDA.csv  ^IXIC.csv  dataManifest.json
data/StockHistData/ARM/: ARM_15_2023-09.csv  ARM_15_2023-09_meta.csv  ARM_15_2023-10.csv  ARM_15_2023-10_meta.csv  ARM_15_2023-11.csv  ARM_15_2023-11_meta.csv  ARM_15_2023-12.csv  ARM_15_2023-12_meta.csv  ARM_15_2024-01.csv  ARM_15_2024-01_meta.csv  ARM_15_2024-02.csv  ARM_15_2024-02_meta.csv  ARM_15_2024-03.csv  ARM_15_2024-03_meta.csv  ARM_15_2024-04.csv  ARM_15_2024-04_meta.csv  ARM_15_2024-05.csv  ARM_15_2024-05_meta.csv  ARM_15_2024-06.csv  ARM_15_2024-06_meta.csv  ARM_15_2024-07.csv  ARM_15_2024-07_meta.csv  ARM_15_2024-08.csv  ARM_15_2024-08_meta.csv  ARM_15_2024-09.csv  ARM_15_2024-09_meta.csv  ARM_15_2024-10.csv  ARM_15_2024-10_meta.csv  ARM_15_2024-11.csv  ARM_15_2024-11_meta.csv  ARM_15_2024-12.csv  ARM_15_2024-12_meta.csv  ARM_15_2025-01.csv  ARM_15_2025-01_meta.csv  ARM_1_2023-09.csv  ARM_1_2023-09_meta.csv  ARM_1_2023-10.csv  ARM_1_2023-10_meta.csv  ARM_1_2023-11.csv  ARM_1_2023-11_meta.csv  (+130 more)
data/StockHistData/GOOG/: GOOG_15_2022-01.csv  GOOG_15_2022-01_meta.csv  GOOG_15_2022-02.csv  GOOG_15_2022-02_meta.csv  GOOG_15_2022-03.csv  GOOG_15_2022-03_meta.csv  GOOG_15_2022-04.csv  GOOG_15_2022-04_meta.csv  GOOG_15_2022-05.csv  GOOG_15_2022-05_meta.csv  GOOG_15_2022-06.csv  GOOG_15_2022-06_meta.csv  GOOG_15_2022-07.csv  GOOG_15_2022-07_meta.csv  GOOG_15_2022-08.csv  GOOG_15_2022-08_meta.csv  GOOG_15_2022-09.csv  GOOG_15_2022-09_meta.csv  GOOG_15_2022-10.csv  GOOG_15_2022-10_meta.csv  GOOG_15_2022-11.csv  GOOG_15_2022-11_meta.csv  GOOG_15_2022-12.csv  GOOG_15_2022-12_meta.csv  GOOG_15_2023-07.csv  GOOG_15_2023-07_meta.csv  GOOG_15_2023-08.csv  GOOG_15_2023-08_meta.csv  GOOG_15_2023-09.csv  GOOG_15_2023-09_meta.csv  GOOG_15_2023-10.csv  GOOG_15_2023-10_meta.csv  GOOG_15_2023-11.csv  GOOG_15_2023-11_meta.csv  GOOG_15_2023-12.csv  GOOG_15_2023-12_meta.csv  GOOG_1_2022-01.csv  GOOG_1_2022-01_meta.csv  GOOG_1_2022-02.csv  GOOG_1_2022-02_meta.csv  (+140 more)
data/StockHistData/KO/: KO_15_2022-01.csv  KO_15_2022-01_meta.csv  KO_15_2022-02.csv  KO_15_2022-02_meta.csv  KO_15_2022-03.csv  KO_15_2022-03_meta.csv  KO_15_2022-04.csv  KO_15_2022-04_meta.csv  KO_15_2022-05.csv  KO_15_2022-05_meta.csv  KO_15_2022-06.csv  KO_15_2022-06_meta.csv  KO_15_2022-07.csv  KO_15_2022-07_meta.csv  KO_15_2022-08.csv  KO_15_2022-08_meta.csv  KO_15_2022-09.csv  KO_15_2022-09_meta.csv  KO_15_2022-10.csv  KO_15_2022-10_meta.csv  KO_15_2022-11.csv  KO_15_2022-11_meta.csv  KO_15_2022-12.csv  KO_15_2022-12_meta.csv  KO_15_2023-01.csv  KO_15_2023-02.csv  (+344 more)
tests/: test_SQLExecution.py  test_SQLIntegration.py  test_SQLKeysQueryGenerator.py
(+780 files in other folders)
