[project]
name = "arcanequant"
description = "A framework for algorithmic and high-frequency trading"
authors = [{ name = "Ahmed Asiliskender", email = "ahmedasiliskender@gmail.com" }]
maintainers = [{ name = "Ahmed Asiliskender", email = "ahmedasiliskender@gmail.com" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.0.0"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-ra"


[bumpversion]
current_version = "0.1.2"
commit = true
tag = true
tag_name = "[{new_version}]"
tag_message = "Bump version: {current_version} → {new_version}"
changelog = true
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
ignore_missing_version = false
sign_tags = false
allow_dirty = false
regex = true
commit_args = ""

[[tool.bump-my-version.files]]
filename = "pyproject.toml"

[[tool.bump-my-version.files]]
filename = "CHANGELOG.md"
search = "^# Changelog\n\n"
replace = "# Changelog\n\n## [{new_version}] - {now:%Y-%m-%d}\n- TODO: Describe changes\n\n"
regex = true

#[tool.changelog_gen]
#current_version = "0.1.2"
#version_string = "{new_version}"
#reject_empty = true
#allowed_branches = [
#    "main",
#]
#date_format = "%Y-%m-%d"