[project]
name = "arcanequant"
description = "A framework for algorithmic and high-frequency trading"
authors = [{ name = "Ahmed Asiliskender", email = "ahmedasiliskender@gmail.com" }]
maintainers = [{ name = "Ahmed Asiliskender", email = "ahmedasiliskender@gmail.com" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.0.0"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-ra"